@@ -34,7 +34,7 @@ class InMemoryUserService(application: Application) extends UserServicePlugin(ap
   private var users = Map[String, Identity]()
   private var tokens = Map[String, Token]()
 
-  def find(id: UserId) = {
+  def find(id: UserId): Option[Identity] = {
     if ( Logger.isDebugEnabled ) {
       Logger.debug("users = %s".format(users))
     }
@@ -48,8 +48,12 @@ class InMemoryUserService(application: Application) extends UserServicePlugin(ap
     users.values.find( u => u.email.map( e => e == email && u.id.providerId == providerId).getOrElse(false))
   }
 
-  def save(user: Identity) {
+  def save(user: Identity): Identity = {
     users = users + (user.id.id + user.id.providerId -> user)
+    // this sample returns the same user object, but you could return an instance of your own class
+    // here as long as it implements the Identity trait. This will allow you to use your own class in the protected
+    // actions and event callbacks. The same goes for the find(id: UserId) method.
+    user
   }
 
   def save(token: Token) {
