@@ -1,4 +1,5 @@
 master
+		- Changed the save() method in UserService to return an Identity so that event callback implementations can receive Identity instances from custom classes.
 		- Added an event API that can be used to track events(only login/logout yet). Scala only for now.
 2.0.9	- 2013-01-25
 		- The login action redirects the user to the app if he is already authenticated now
